sredila frontend i backend poverenika

--- a/frontend-poverenik/src/app/components/layout/preloader/preloader.component.sass
+++ b/frontend-poverenik/src/app/components/layout/preloader/preloader.component.sass
@@ -1,4 +1,5 @@
 @import "../../../../styles/constants"
+@import "../../../../styles/theme"
 
 div
     display: flex
@@ -9,6 +10,7 @@ div
     width: $full-size
     position: absolute
     z-index: $z-index-1
+    background-color: $background-primary
 
 .mat-spinner
     opacity: $disabled-opacity
