--- a/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
@@ -8,10 +8,21 @@
                 <input 
                 matInput 
                 autocomplete="off"
-                formControlName="organVlasti" 
+                formControlName="naziv" 
                 placeholder="Unesite naziv organa vlasti">
                 <mat-error>
                     Naziv organa vlasti je obavezan!
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Sedište organa vlasti</mat-label>
+                <input 
+                matInput 
+                autocomplete="off"
+                formControlName="sediste" 
+                placeholder="Unesite sediste organa vlasti (mesto ulica broj)">
+                <mat-error>
+                    Sedište organa vlasti je obavezan!
                 </mat-error>
             </mat-form-field>
             <mat-form-field> 
@@ -21,9 +32,9 @@
                 autocomplete="off"
                 formControlName="datumZahteva" 
                 placeholder="Unesite datum podnošenja zahteva"
-                [matDatepicker]="datumZahtevaPicker">
-                <mat-datepicker-toggle matSuffix [for]="datumZahtevaPicker"></mat-datepicker-toggle>
-                <mat-datepicker #datumZahtevaPicker></mat-datepicker>
+                [matDatepicker]="datumZahteva">
+                <mat-datepicker-toggle matSuffix [for]="datumZahteva"></mat-datepicker-toggle>
+                <mat-datepicker #datumZahteva></mat-datepicker>
                 <mat-error>
                     Datum podnošenja zahteva je obavezan!
                 </mat-error>    
@@ -50,7 +61,7 @@
             *ngIf="!savePending"
             mat-raised-button 
             color="primary"
-            (click)="posaljiZalbu()">Pošalji zalbu</button>
+            (click)="save()">Pošalji zalbu</button>
             <app-spinner-button *ngIf="savePending"></app-spinner-button>
         </app-center-container>
     </form>
