--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -1,11 +1,11 @@
-<app-preloader *ngIf="fetchPending"></app-preloader>
+<app-preloader *ngIf="fetchPending">
+</app-preloader>
+
+<app-empty-container *ngIf="!zalbe?.length"
+[title]="'NEMA ŽALBI'">
+</app-empty-container>
 
 <app-zalba-details 
 *ngFor="let zalba of zalbe"
 [zalba]="zalba">
 </app-zalba-details>
-
-
-<app-empty-container *ngIf="!zalbe?.length"
-[title]="'NEMA ZALBI'">
-</app-empty-container>
