--- a/frontend-poverenik/src/app/components/main/login-form/login-form.component.html
+++ b/frontend-poverenik/src/app/components/main/login-form/login-form.component.html
@@ -4,14 +4,14 @@
     <form [formGroup]="loginForm">
         <div [class.disabled]="loginPending">
             <mat-form-field>
-                <mat-label>Email</mat-label>
+                <mat-label>Mejl</mat-label>
                 <input 
                 matInput 
                 autocomplete="off"
-                formControlName="email" 
-                placeholder="Unesite email">
+                formControlName="mejl" 
+                placeholder="Unesite mejl">
                 <mat-error>
-                    Email je obavezan!
+                    Mejl je obavezan!
                 </mat-error>
             </mat-form-field>
             <mat-form-field>
