--- a/frontend-poverenik/src/app/components/resenje/resenje-list/resenje-list.component.html
+++ b/frontend-poverenik/src/app/components/resenje/resenje-list/resenje-list.component.html
@@ -1,11 +1,10 @@
-<app-preloader *ngIf="fetchPending"></app-preloader>
+<app-preloader *ngIf="fetchPending">
+</app-preloader>
+
+<app-empty-container *ngIf="!resenja?.length"
+[title]="'NEMA REŠENJA'"></app-empty-container>
 
 <app-resenje-details 
 *ngFor="let resenje of resenja"
 [resenje]="resenje">
 </app-resenje-details>
-
-<app-empty-container 
-*ngIf="!resenja?.length"
-[title]="'NEMA RESENJA'">
-</app-empty-container>
