--- a/frontend-poverenik/src/app/components/zalba/zalba-details/zalba-details.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-details/zalba-details.component.html
@@ -5,19 +5,19 @@
                 {{zalba.tipZalbe}}
             </span>  
             <span>
-                {{zalba.organVlasti}}
-            </span>
-            <span>
                 {{zalba.datum}}
             </span>
             <span>
-                <button (click)="openHtml()">uzmi html</button>
+                {{zalba.organVlasti}}
+            </span>
+            <span>
+                <a [routerLink]="'/zalba-list'" (click)="getHtml()">preuzmi html</a>
             </span>
             <span>                
-                <button (click)="openPdf()">uzmi pdf</button>
+                <a [routerLink]="'/zalba-list'" (click)="getPdf()">preuzmi pdf</a>
             </span>
             <span *ngIf="uloga === 'poverenik' && zalba.status === 'cekanje'">
-                <button (click)="dodajResenje()">dodaj resenje</button>
+                <a [routerLink]="'/resenje-form/' + zalba.broj">dodaj rešenje</a>
             </span>
         </mat-card-content>
     </mat-card>
