--- a/frontend-organ-vlasti/src/app/components/main/toolbar/toolbar.component.sass
+++ b/frontend-organ-vlasti/src/app/components/main/toolbar/toolbar.component.sass
@@ -8,3 +8,9 @@
     height: $toolbar-height
     position: fixed
     z-index: $z-index-2
+
+.details
+    display: flex 
+    flex-direction: row
+    align-items: center
+    justify-content: center
