--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -1,11 +1,65 @@
 <app-preloader *ngIf="fetchPending">
 </app-preloader>
 
-<app-empty-container *ngIf="!zahtevi?.length"
-[title]="'NEMA ZAHTEVA'">
-</app-empty-container>
+<div class="root">
 
-<app-zahtev-details 
-*ngFor="let zahtev of zahtevi"
-[zahtev]="zahtev">
-</app-zahtev-details>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="zahtevi">
+  
+      <ng-container matColumnDef="tipZahteva">
+        <th mat-header-cell *matHeaderCellDef>Tip zahteva</th>
+        <td mat-cell *matCellDef="let zahtev"> {{zahtev.tipZahteva}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="datum">
+        <th mat-header-cell *matHeaderCellDef>Datum izdavanja</th>
+        <td mat-cell *matCellDef="let zahtev"> {{zahtev.datum}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let zahtev"> {{zahtev.status}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="html">
+        <th mat-header-cell *matHeaderCellDef>Html</th>
+        <td mat-cell *matCellDef="let zahtev">
+          <a [routerLink]="'/html/zahtevi/' + zahtev.broj">preuzmi html</a>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="pdf">
+        <th mat-header-cell *matHeaderCellDef>Pdf</th>
+        <td mat-cell *matCellDef="let zahtev">
+          <a [routerLink]="'/pdf/zahtevi/' + zahtev.broj">preuzmi pdf</a>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="akcije">
+        <th mat-header-cell *matHeaderCellDef>Akcije</th>
+        <td mat-cell *matCellDef="let zahtev">
+            <span *ngIf="uloga === 'sluzbenik' && zahtev.status === 'cekanje'">
+              <button 
+              mat-icon-button
+              color="primary"
+              [routerLink]="'/obavestenje-form/' + zahtev.broj">
+                  <mat-icon matTooltip="Dodaj obaveštenje">add</mat-icon>
+              </button>
+              <button 
+              mat-icon-button
+              color="warn"
+              [routerLink]="'/odbijanje-form/' + zahtev.broj">
+                  <mat-icon matTooltip="Odbij zahtev">remove</mat-icon>
+              </button>  
+            </span>
+        </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="columns"></tr>
+      <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  </div>
+  
+</div>
