--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.sass
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.sass
@@ -3,6 +3,14 @@
 table
     width: $full-size
 
+th, td
+    width: 25%
+
+
 .root
     padding: $padding-30
+    
+.actions
+    display: flex
+    flex-direction: row
     
