--- a/frontend-organ-vlasti/src/app/components/odgovor/odgovor-list/odgovor-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/odgovor/odgovor-list/odgovor-list.component.html
@@ -3,6 +3,8 @@
 
 <div class="root">
 
+  <h2>Lista odgovora organ vlasti</h2><br>
+
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="odgovori">
   
@@ -37,7 +39,8 @@
     
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
       <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-
+      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="5">Nema odgovora</td></tr>
+    
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
