--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -3,14 +3,11 @@
 
 <div class="root">
 
+  <h2>Lista poslatih zahteva organu vlasti</h2><br>
+
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="zahtevi">
-  
-      <ng-container matColumnDef="tipZahteva">
-        <th mat-header-cell *matHeaderCellDef>Tip zahteva</th>
-        <td mat-cell *matCellDef="let zahtev"> {{zahtev.tipZahteva}} </td>
-      </ng-container>
-  
+    
       <ng-container matColumnDef="datum">
         <th mat-header-cell *matHeaderCellDef>Datum izdavanja</th>
         <td mat-cell *matCellDef="let zahtev"> {{zahtev.datum}} </td>
@@ -38,7 +35,7 @@
       <ng-container matColumnDef="akcije">
         <th mat-header-cell *matHeaderCellDef>Akcije</th>
         <td mat-cell *matCellDef="let zahtev">
-            <span *ngIf="uloga === 'sluzbenik' && zahtev.status === 'cekanje'">
+            <span class="actions" *ngIf="uloga === 'sluzbenik' && zahtev.status === 'cekanje'">
               <button 
               mat-icon-button
               color="primary"
@@ -57,6 +54,7 @@
     
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
       <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="5">Nema zahteva</td></tr>
 
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
