sredjen frontend+bekend poverenika2

--- a/frontend-poverenik/src/app/components/resenje/resenje-form/resenje-form.component.html
+++ b/frontend-poverenik/src/app/components/resenje/resenje-form/resenje-form.component.html
@@ -7,10 +7,10 @@
             <mat-form-field>
                 <mat-label>Status rešenja: </mat-label>
                 <mat-select formControlName="status">
-                    <mat-option [value]="'odbijena'">
+                    <mat-option [value]="'odbijeno'">
                         žalba se odbija
                     </mat-option>
-                    <mat-option [value]="'odobrena'">
+                    <mat-option [value]="'odobreno'">
                         žalbe se prihvata
                     </mat-option>
                 </mat-select>                
