--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -35,8 +35,14 @@
       <ng-container matColumnDef="akcije">
         <th mat-header-cell *matHeaderCellDef>Akcije</th>
         <td mat-cell *matCellDef="let zalba">
-            <a *ngIf="uloga === 'poverenik' && zalba.status === 'cekanje'"
-            [routerLink]="'/resenje-form/' + zalba.broj">dodaj rešenje</a>
+          <button 
+          *ngIf="!savePending && uloga === 'poverenik' && zalba.status === 'cekanje'"
+          mat-raised-button 
+          color="primary"
+          (click)="send(zalba.broj)">Prosledi zalbu</button>
+          <app-spinner-button *ngIf="sendPending"></app-spinner-button>
+          <a *ngIf="uloga === 'poverenik' && zalba.status === 'odgovoreno'"
+          [routerLink]="'/resenje-form/' + zalba.broj">dodaj rešenje</a>
         </td>
       </ng-container>
     
