--- a/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
@@ -1,6 +1,5 @@
 <app-form-container>
-    <h3>Žalba na odluku organa vlasti</h3>
-    <br><br>
+    <h3>Žalba na odluku organa vlasti</h3><br><br>
     <form [formGroup]="zalbaForm">
         <div [class.disabled]="savePending">
             <mat-form-field>
