--- a/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-odluka-form/zalba-odluka-form.component.html
@@ -14,15 +14,15 @@
                 </mat-error>
             </mat-form-field>
             <mat-form-field>
-                <mat-label>Sedište organa vlasti</mat-label>
+                <mat-label>Broj zahteva</mat-label>
                 <input 
                 matInput 
                 autocomplete="off"
-                formControlName="sediste" 
-                placeholder="Unesite sediste organa vlasti (mesto ulica broj)">
+                formControlName="brojZahteva"
+                placeholder="Unesite broj zahteva">
                 <mat-error>
-                    Sedište organa vlasti je obavezan!
-                </mat-error>
+                    Broj zahteva je obavezan!
+                </mat-error>    
             </mat-form-field>
             <mat-form-field> 
                 <mat-label>Datum podnošenja zahteva: </mat-label>
