--- a/frontend-poverenik/src/app/components/resenje/resenje-list/resenje-list.component.html
+++ b/frontend-poverenik/src/app/components/resenje/resenje-list/resenje-list.component.html
@@ -7,15 +7,15 @@
 
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="resenja">
-
-      <ng-container matColumnDef="organVlasti">
-        <th mat-header-cell *matHeaderCellDef>Organ vlasti</th>
-        <td mat-cell *matCellDef="let resenje"> {{resenje.organVlasti}} </td>
-      </ng-container>
     
       <ng-container matColumnDef="datum">
         <th mat-header-cell *matHeaderCellDef>Datum izdavanja</th>
         <td mat-cell *matCellDef="let resenje"> {{resenje.datum}} </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Status rešenja</th>
+        <td mat-cell *matCellDef="let resenje"> {{resenje.status}} </td>
       </ng-container>
 
       <ng-container matColumnDef="html">
