--- a/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
@@ -14,15 +14,15 @@
                 </mat-error>
             </mat-form-field>
             <mat-form-field>
-                <mat-label>Sedište organa vlasti</mat-label>
+                <mat-label>Broj zahteva</mat-label>
                 <input 
                 matInput 
                 autocomplete="off"
-                formControlName="sediste" 
-                placeholder="Unesite sediste organa vlasti (mesto ulica broj)">
+                formControlName="brojZahteva"
+                placeholder="Unesite broj zahteva">
                 <mat-error>
-                    Sedište organa vlasti je obavezan!
-                </mat-error>
+                    Broj zahteva je obavezan!
+                </mat-error>    
             </mat-form-field>
             <mat-form-field> 
                 <mat-label>Datum podnošenja zahteva: </mat-label>
@@ -51,6 +51,17 @@
                         nije postupio u celosti
                     </mat-option>
                 </mat-select>                
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Broj odluke</mat-label>
+                <input 
+                matInput 
+                autocomplete="off"
+                formControlName="brojOdluke"
+                placeholder="Unesite broj odluke">
+                <mat-error>
+                    Broj odluke je obavezan!
+                </mat-error>    
             </mat-form-field>
             <div id="detaljiEditor"></div>
         </div>    
