--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -21,8 +21,9 @@
       <ng-container matColumnDef="dokumenti">
         <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
         <td mat-cell *matCellDef="let zalba">
-          <a [routerLink]="'/html/zalbe/' + zalba.broj">preuzmi html</a>
-          <a [routerLink]="'/pdf/zalbe/' + zalba.broj">preuzmi pdf</a>        </td>
+          <a [routerLink]="'/html/zalbe/' + zalba.broj">preuzmi html</a><br>
+          <a [routerLink]="'/pdf/zalbe/' + zalba.broj">preuzmi pdf</a>        
+      </td>
       </ng-container>
 
       <ng-container matColumnDef="akcije">
@@ -32,10 +33,27 @@
           *ngIf="!sendPending && uloga === 'poverenik' && zalba.status === 'cekanje'"
           mat-raised-button 
           color="primary"
-          (click)="send(zalba)">Prosledi žalbu</button>
-          <a *ngIf="uloga === 'poverenik' && canAddResenje(zalba)"
+          (click)="prosledi(zalba)">Prosledi žalbu
+          </button>
+          <button
+          *ngIf="!sendPending && uloga === 'gradjanin' && canOdustati(zalba)"
+          (click)="odustani(zalba)"
+          >Odustani od žalbe</button>
+          <button
+          *ngIf="!sendPending && uloga === 'poverenik' && canObustaviti(zalba)"
+          (click)="obustavi(zalba)"
+          >Obustavi žalbu</button>
+          <a *ngIf="uloga === 'poverenik' && canResiti(zalba)"
           [routerLink]="'/resenje-form/' + zalba.broj">dodaj rešenje</a>
         </td>
+      </ng-container>
+
+      <ng-container matColumnDef="odgovor">
+        <th mat-header-cell *matHeaderCellDef>Odgovor</th>
+        <td mat-cell *matCellDef="let zalba">
+          <a *ngIf="zalba.status === 'odgovoreno'" [routerLink]="'/html/odgovori/' + zalba.broj">preuzmi html</a><br>
+          <a *ngIf="zalba.status === 'odgovoreno'" [routerLink]="'/pdf/odgovori/' + zalba.broj">preuzmi pdf</a>          
+      </td>
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
