--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -18,16 +18,10 @@
         <td mat-cell *matCellDef="let zahtev"> {{zahtev.status}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="html">
-        <th mat-header-cell *matHeaderCellDef>Html</th>
+      <ng-container matColumnDef="dokumenti">
+        <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
         <td mat-cell *matCellDef="let zahtev">
-          <a [routerLink]="'/html/zahtevi/' + zahtev.broj">preuzmi html</a>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="pdf">
-        <th mat-header-cell *matHeaderCellDef>Pdf</th>
-        <td mat-cell *matCellDef="let zahtev">
+          <a [routerLink]="'/html/zahtevi/' + zahtev.broj">preuzmi html</a><br>
           <a [routerLink]="'/pdf/zahtevi/' + zahtev.broj">preuzmi pdf</a>
         </td>
       </ng-container>
@@ -51,6 +45,15 @@
             </span>
         </td>
       </ng-container>
+
+      <ng-container matColumnDef="metapodaci">
+        <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
+        <td mat-cell *matCellDef="let zahtev">
+          <a (click)="xmlMetadata(zahtev.broj)" href="/zahtev-list">preuzmi xml</a><br>
+          <a (click)="jsonMetadata(zahtev.broj)" href="/zahtev-list">preuzmi json</a><br>
+        </td>
+      </ng-container>
+
     
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
       <tr mat-row *matRowDef="let row; columns: columns;"></tr>
