--- a/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
@@ -23,17 +23,19 @@
         <td mat-cell *matCellDef="let odgovor"> {{odgovor.datumZahteva}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="html">
-        <th mat-header-cell *matHeaderCellDef>Html</th>
+      <ng-container matColumnDef="dokumenti">
+        <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
         <td mat-cell *matCellDef="let odgovor">
-          <a [routerLink]="'/html/odluke/' + odgovor.broj">preuzmi html</a>
+          <a [routerLink]="'/html/odluke/' + odgovor.broj">preuzmi html</a><br>
+          <a [routerLink]="'/pdf/odluke/' + odgovor.broj">preuzmi pdf</a>
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="pdf">
-        <th mat-header-cell *matHeaderCellDef>Pdf</th>
-        <td mat-cell *matCellDef="let odgovor">
-          <a [routerLink]="'/pdf/odluke/' + odgovor.broj">preuzmi pdf</a>
+      <ng-container matColumnDef="metapodaci">
+        <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
+        <td mat-cell *matCellDef="let odluka">
+          <a (click)="xmlMetadata(odluka.broj)" href="/odluka-list">preuzmi xml</a><br>
+          <a (click)="jsonMetadata(odluka.broj)" href="/odluka-list">preuzmi json</a>
         </td>
       </ng-container>
     
