--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -50,7 +50,7 @@
         <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
         <td mat-cell *matCellDef="let zahtev">
           <a (click)="xmlMetadata(zahtev.broj)" href="/zahtev-list">preuzmi xml</a><br>
-          <a (click)="jsonMetadata(zahtev.broj)" href="/zahtev-list">preuzmi json</a><br>
+          <a (click)="jsonMetadata(zahtev.broj)" href="/zahtev-list">preuzmi json</a>
         </td>
       </ng-container>
 
