--- a/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
@@ -15,12 +15,12 @@
   
       <ng-container matColumnDef="datum">
         <th mat-header-cell *matHeaderCellDef>Datum izdavanja</th>
-        <td mat-cell *matCellDef="let odgovor"> {{odgovor.datum}} </td>
+        <td mat-cell *matCellDef="let odgovor"> {{convertDate(odgovor.datum)}} </td>
       </ng-container>
   
       <ng-container matColumnDef="datumZahteva">
         <th mat-header-cell *matHeaderCellDef>Datum podnošenja zahteva</th>
-        <td mat-cell *matCellDef="let odgovor"> {{odgovor.datumZahteva}} </td>
+        <td mat-cell *matCellDef="let odgovor"> {{convertDate(odgovor.datumZahteva)}} </td>
       </ng-container>
 
       <ng-container matColumnDef="dokumenti">
