--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -10,7 +10,7 @@
     
       <ng-container matColumnDef="datum">
         <th mat-header-cell *matHeaderCellDef>Datum podnošenja</th>
-        <td mat-cell *matCellDef="let zahtev"> {{zahtev.datum}} </td>
+        <td mat-cell *matCellDef="let zahtev"> {{convertDate(zahtev.datum)}} </td>
       </ng-container>
   
       <ng-container matColumnDef="status">
