--- a/frontend-organ-vlasti/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -15,7 +15,7 @@
   
       <ng-container matColumnDef="datum">
         <th mat-header-cell *matHeaderCellDef>Datum podnošenja</th>
-        <td mat-cell *matCellDef="let zalba"> {{zalba.datum}} </td>
+        <td mat-cell *matCellDef="let zalba"> {{convertDate(zalba.datum)}} </td>
       </ng-container>
 
       <ng-container matColumnDef="html">
