--- a/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
@@ -1,5 +1,4 @@
-<app-preloader *ngIf="fetchPending">
-</app-preloader>
+<app-preloader *ngIf="fetchPending"></app-preloader>
 
 <div class="root">
 
@@ -26,16 +25,16 @@
       <ng-container matColumnDef="dokumenti">
         <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
         <td mat-cell *matCellDef="let odgovor">
-          <a [routerLink]="'/html/odluke/' + odgovor.broj">preuzmi html</a><br>
-          <a [routerLink]="'/pdf/odluke/' + odgovor.broj">preuzmi pdf</a>
+          <a [routerLink]="'/html/odluke/' + odgovor.broj">HTML</a><br>
+          <a [routerLink]="'/pdf/odluke/' + odgovor.broj">PDF</a>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="metapodaci">
         <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
         <td mat-cell *matCellDef="let odluka">
-          <a (click)="xmlMetadata(odluka.broj)" href="/odluka-list">preuzmi xml</a><br>
-          <a (click)="jsonMetadata(odluka.broj)" href="/odluka-list">preuzmi json</a>
+          <a (click)="xmlMetadata(odluka.broj)" href="/odluka-list">XML</a><br>
+          <a (click)="jsonMetadata(odluka.broj)" href="/odluka-list">JSON</a>
         </td>
       </ng-container>
     
@@ -46,6 +45,5 @@
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
-
 </div>
   
