--- a/frontend-poverenik/src/app/components/resenje/resenje-form/resenje-form.component.html
+++ b/frontend-poverenik/src/app/components/resenje/resenje-form/resenje-form.component.html
@@ -10,7 +10,7 @@
                         žalba se odbija
                     </mat-option>
                     <mat-option [value]="'odobreno'">
-                        žalbe se prihvata
+                        žalba se prihvata
                     </mat-option>
                 </mat-select>                
             </mat-form-field>      
