--- a/frontend-poverenik/src/app/components/resenje/resenje-list/resenje-list.component.html
+++ b/frontend-poverenik/src/app/components/resenje/resenje-list/resenje-list.component.html
@@ -1,5 +1,4 @@
-<app-preloader *ngIf="fetchPending">
-</app-preloader>
+<app-preloader *ngIf="fetchPending"></app-preloader>
 
 <div class="root">
 
@@ -12,26 +11,28 @@
         <th mat-header-cell *matHeaderCellDef>Datum izdavanja</th>
         <td mat-cell *matCellDef="let resenje"> {{resenje.datum}} </td>
       </ng-container>
-      
+
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status rešenja</th>
+        <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let resenje"> {{resenje.status}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="html">
-        <th mat-header-cell *matHeaderCellDef>Html</th>
+      <ng-container matColumnDef="dokumenti">
+        <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
         <td mat-cell *matCellDef="let resenje">
-          <a [routerLink]="'/html/resenja/' + resenje.broj">preuzmi html</a>
+          <a [routerLink]="'/html/resenja/' + resenje.broj">HTML</a><br>
+          <a [routerLink]="'/pdf/resenja/' + resenje.broj">PDF</a>
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="pdf">
-        <th mat-header-cell *matHeaderCellDef>Pdf</th>
+      <ng-container matColumnDef="metapodaci">
+        <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
         <td mat-cell *matCellDef="let resenje">
-          <a [routerLink]="'/pdf/resenja/' + resenje.broj">preuzmi pdf</a>
+          <a (click)="xmlMetadata(resenje.broj)" href="/resenje-list">XML</a><br>
+          <a (click)="jsonMetadata(resenje.broj)" href="/resenje-list">JSON</a>
         </td>
       </ng-container>
-    
+
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
       <tr mat-row *matRowDef="let row; columns: columns;"></tr>
       <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="5">Nema rešenja</td></tr>
@@ -39,5 +40,4 @@
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
-  
 </div>
