--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -18,6 +18,11 @@
         <td mat-cell *matCellDef="let zalba"> {{convertDate(zalba.datum)}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let zalba">zalba.status</td>
+      </ng-container>
+
       <ng-container matColumnDef="dokumenti">
         <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
         <td mat-cell *matCellDef="let zalba">
@@ -37,8 +42,8 @@
       <ng-container matColumnDef="odgovor">
         <th mat-header-cell *matHeaderCellDef>Odgovor</th>
         <td mat-cell *matCellDef="let zalba">
-          <a *ngIf="zalba.status === 'odgovoreno'" [routerLink]="'/html/odgovori/' + zalba.broj">preuzmi html</a><br>
-          <a *ngIf="zalba.status === 'odgovoreno'" [routerLink]="'/pdf/odgovori/' + zalba.broj">preuzmi pdf</a>          
+          <a *ngIf="zalba.status === 'odgovoreno'" [routerLink]="'/html/odgovori/' + zalba.broj">HTML</a><br>
+          <a *ngIf="zalba.status === 'odgovoreno'" [routerLink]="'/pdf/odgovori/' + zalba.broj">PDF</a>          
         </td>
       </ng-container>
 
@@ -49,31 +54,31 @@
           *ngIf="!sendPending && uloga === 'poverenik' && zalba.status === 'cekanje'"
           mat-raised-button 
           color="primary"
-          (click)="prosledi(zalba)">Prosledi žalbu
-          </button>
+          (click)="prosledi(zalba)">
+          Prosledi žalbu</button>
           <button
+          *ngIf="!sendPending && uloga === 'poverenik' && zalba.status === 'odustato'"
           mat-raised-button 
           color="primary"
+          (click)="obustavi(zalba)">
+          Obustavi žalbu</button>
+          <button
           *ngIf="!sendPending && uloga === 'gradjanin' && canOdustati(zalba)"
-          (click)="odustani(zalba)"
-          >Odustani od žalbe</button>
-          <button
           mat-raised-button 
           color="primary"
-          *ngIf="!sendPending && uloga === 'poverenik' && canObustaviti(zalba)"
-          (click)="obustavi(zalba)"
-          >Obustavi žalbu</button>
-          <a *ngIf="uloga === 'poverenik' && canResiti(zalba)"
-          [routerLink]="'/resenje-form/' + zalba.broj">dodaj rešenje</a>
+          (click)="odustani(zalba)">
+          Odustani od žalbe</button>
+          <a 
+          *ngIf="uloga === 'poverenik' && canResiti(zalba)"
+          [routerLink]="'/resenje-form/' + zalba.broj">Dodaj rešenje</a>
         </td>
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
       <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="5">Nema žalbi</td></tr>
+      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="7">Nema žalbi</td></tr>
 
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
-  
 </div>
