--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -20,7 +20,7 @@
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let zalba">zalba.status</td>
+        <td mat-cell *matCellDef="let zalba">{{zalba.status}}</td>
       </ng-container>
 
       <ng-container matColumnDef="dokumenti">
