--- a/frontend-organ-vlasti/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -17,6 +17,11 @@
         <td mat-cell *matCellDef="let zalba"> {{convertDate(zalba.datum)}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let zalba"> {{zalba.status}} </td>
+      </ng-container>
+
       <ng-container matColumnDef="dokumenti">
         <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
         <td mat-cell *matCellDef="let zalba">
@@ -47,7 +52,7 @@
     
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
       <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="5">Nema žalbi</td></tr>
+      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="6">Nema žalbi</td></tr>
 
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
