--- a/frontend-poverenik/src/app/components/main/toolbar/toolbar.component.html
+++ b/frontend-poverenik/src/app/components/main/toolbar/toolbar.component.html
@@ -22,6 +22,13 @@
             Žalbe
         </button>
         <button 
+        matTooltip="Lista odgovora na žalbe"
+        *ngIf="!auth"
+        mat-button
+        [routerLink]="'/odgovor-list'">
+            Odgovori
+        </button>
+        <button 
         matTooltip="Lista izdatih rešenja"
         *ngIf="!auth"
         mat-button
