--- a/frontend-poverenik/src/app/components/main/toolbar/toolbar.component.html
+++ b/frontend-poverenik/src/app/components/main/toolbar/toolbar.component.html
@@ -35,6 +35,13 @@
         [routerLink]="'/resenje-list'">
             Rešenja
         </button>
+        <button 
+        matTooltip="Lista godišnjih izveštaja"
+        *ngIf="!auth"
+        mat-button
+        [routerLink]="'/izvestaj-list'">
+            Izveštaji
+        </button>
     </span>
     <span class="details">
         <button 
