--- a/frontend-organ-vlasti/src/app/components/izvestaj/izvestaj-list/izvestaj-list.component.sass
+++ b/frontend-organ-vlasti/src/app/components/izvestaj/izvestaj-list/izvestaj-list.component.sass
@@ -5,3 +5,14 @@ th, td
 
 .root
     padding: $padding-30
+
+.podnosenjeSpan
+    border-top: 1px solid lightgray
+    display: flex
+    flex-direction: row
+    justify-content: center
+    align-items: center
+    background-color: white
+    
+.podnosenjeSpan > span
+    margin:10px
