ispravke gresaka uocene tokom testiranja

--- a/frontend-poverenik/src/app/components/main/toolbar/toolbar.component.html
+++ b/frontend-poverenik/src/app/components/main/toolbar/toolbar.component.html
@@ -37,7 +37,7 @@
         </button>
         <button 
         matTooltip="Lista godišnjih izveštaja"
-        *ngIf="!auth"
+        *ngIf="!auth && uloga === 'poverenik'"
         mat-button
         [routerLink]="'/izvestaj-list'">
             Izveštaji
