--- a/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/odluka/odluka-list/odluka-list.component.html
@@ -33,8 +33,8 @@
       <ng-container matColumnDef="metapodaci">
         <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
         <td mat-cell *matCellDef="let odluka">
-          <a (click)="xmlMetadata(odluka.broj)" href="/odluka-list">XML</a><br>
-          <a (click)="jsonMetadata(odluka.broj)" href="/odluka-list">JSON</a>
+          <a *ngIf="true" (click)="xmlMetadata(odluka.broj)">XML</a><br>
+          <a *ngIf="true" (click)="jsonMetadata(odluka.broj)">JSON</a>
         </td>
       </ng-container>
     
