--- a/frontend-organ-vlasti/src/app/components/resenje/resenje-list/resenje-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/resenje/resenje-list/resenje-list.component.html
@@ -28,8 +28,8 @@
       <ng-container matColumnDef="metapodaci">
         <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
         <td mat-cell *matCellDef="let resenje">
-          <a (click)="xmlMetadata(resenje.broj)" href="/resenje-list">XML</a><br>
-          <a (click)="jsonMetadata(resenje.broj)" href="/resenje-list">JSON</a>
+          <a *ngIf="true" (click)="xmlMetadata(resenje.broj)">XML</a><br>
+          <a *ngIf="true" (click)="jsonMetadata(resenje.broj)">JSON</a>
         </td>
       </ng-container>
 
