--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -33,8 +33,8 @@
       <ng-container matColumnDef="metapodaci">
         <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
         <td mat-cell *matCellDef="let zahtev">
-          <a (click)="xmlMetadata(zahtev.broj)" href="/zahtev-list">XML</a><br>
-          <a (click)="jsonMetadata(zahtev.broj)" href="/zahtev-list">JSON</a>
+          <a *ngIf="true" (click)="xmlMetadata(zahtev.broj)">XML</a><br>
+          <a *ngIf="true" (click)="jsonMetadata(zahtev.broj)">JSON</a>
         </td>
       </ng-container>
 
