--- a/frontend-poverenik/src/app/components/zalba/odgovor-list/odgovor-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/odgovor-list/odgovor-list.component.html
@@ -33,8 +33,8 @@
       <ng-container matColumnDef="metapodaci">
         <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
         <td mat-cell *matCellDef="let odgovor">
-          <a (click)="xmlMetadata(odgovor.broj)" href="/odgovor-list">XML</a><br>
-          <a (click)="jsonMetadata(odgovor.broj)" href="/odgovor-list">JSON</a>
+          <a *ngIf="true" (click)="xmlMetadata(odgovor.broj)">XML</a><br>
+          <a *ngIf="true" (click)="jsonMetadata(odgovor.broj)">JSON</a>
         </td>
       </ng-container>
 
