--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -34,40 +34,26 @@
       <ng-container matColumnDef="metapodaci">
         <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
         <td mat-cell *matCellDef="let zalba">
-          <a (click)="xmlMetadata(zalba.broj)" href="/zalba-list">XML</a><br>
-          <a (click)="jsonMetadata(zalba.broj)" href="/zalba-list">JSON</a>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="odgovor">
-        <th mat-header-cell *matHeaderCellDef>Odgovor</th>
-        <td mat-cell *matCellDef="let zalba">
-          <a *ngIf="zalba.status === 'odgovoreno'" [routerLink]="'/html/odgovori/' + zalba.broj">HTML</a><br>
-          <a *ngIf="zalba.status === 'odgovoreno'" [routerLink]="'/pdf/odgovori/' + zalba.broj">PDF</a>          
+          <a *ngIf="true" (click)="xmlMetadata(zalba.broj)">XML</a><br>
+          <a *ngIf="true" (click)="jsonMetadata(zalba.broj)">JSON</a>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="akcije">
         <th mat-header-cell *matHeaderCellDef>Akcije</th>
         <td mat-cell *matCellDef="let zalba">
-          <button 
+          <a 
           *ngIf="!sendPending && uloga === 'poverenik' && zalba.status === 'cekanje'"
-          mat-raised-button 
-          color="primary"
           (click)="prosledi(zalba)">
-          Prosledi žalbu</button>
-          <button
+          Prosledi</a>
+          <a
           *ngIf="!sendPending && uloga === 'poverenik' && zalba.status === 'odustato'"
-          mat-raised-button 
-          color="primary"
           (click)="obustavi(zalba)">
-          Obustavi žalbu</button>
-          <button
+          Obustavi</a>
+          <a
           *ngIf="!sendPending && uloga === 'gradjanin' && canOdustati(zalba)"
-          mat-raised-button 
-          color="primary"
           (click)="odustani(zalba)">
-          Odustani od žalbe</button>
+          Odustani</a>
           <a 
           *ngIf="uloga === 'poverenik' && canResiti(zalba)"
           [routerLink]="'/resenje-form/' + zalba.broj">Dodaj rešenje</a>
@@ -76,7 +62,7 @@
     
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
       <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="7">Nema žalbi</td></tr>
+      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="6">Nema žalbi</td></tr>
 
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
