dodala linkice u pdf

--- a/frontend-organ-vlasti/src/app/components/main/toolbar/toolbar.component.html
+++ b/frontend-organ-vlasti/src/app/components/main/toolbar/toolbar.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar color="primary" class="mat-elevation-z24">
     <span>
-        <button 
+        <button
+        class="toggler"
         mat-icon-button 
         (click)="drawerToggle()">
-            <mat-icon matTooltip="pretraga">menu</mat-icon>
+            <mat-icon matTooltip="Pretraga">menu</mat-icon>
         </button>
         <button 
         matTooltip="Zahtev za informacijama od javnog značaja"
