--- a/frontend-poverenik/src/app/components/main/toolbar/toolbar.component.html
+++ b/frontend-poverenik/src/app/components/main/toolbar/toolbar.component.html
@@ -1,5 +1,11 @@
 <mat-toolbar color="primary" class="mat-elevation-z24">
     <span>
+        <button
+        class="toggler"
+        mat-icon-button 
+        (click)="drawerToggle()">
+            <mat-icon matTooltip="Pretraga">menu</mat-icon>
+        </button>
         <button 
         matTooltip="Žalba na ćutanje organa vlasti"
         *ngIf="!auth && uloga==='gradjanin'"
