--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.sass
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.sass
@@ -1,7 +1,16 @@
 @import "../../../../styles/constants"
+@import "../../../../styles/theme"
 
 th, td
     width: 20%
 
 .root
     padding: $padding-30
+
+.mat-drawer-container
+    height: $full-size
+    background-color: $background-primary
+
+.mat-drawer
+    padding: $padding-20
+    width: 400px
