--- a/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-list/zalba-list.component.html
@@ -1,70 +1,182 @@
-<app-preloader *ngIf="fetchPending || sendPending" [transparent]="sendPending">
-</app-preloader>
+<mat-drawer-container>
+  <mat-drawer mode="side" #drawer class="mat-elevation-z24">
 
-<div class="root">
+    <h3>Napredna pretraga</h3><br>
 
-  <h2>Lista podnetih žalbi</h2><br>
+    <form [formGroup]="naprednaForma">
+      <div [class.disabled]="fetchPending">
+        <mat-form-field>
+          <mat-label>Logička operacija</mat-label>
+          <mat-select formControlName="operacija">
+              <mat-option [value]="'and'">
+                  and operacija
+              </mat-option>
+              <mat-option [value]="'or'">
+                  or operacija
+              </mat-option>
+          </mat-select>                
+        </mat-form-field>
+        <mat-form-field> 
+          <mat-label>Datum</mat-label>
+          <input 
+          matInput 
+          autocomplete="off"
+          formControlName="datum" 
+          placeholder="Unesite datum"
+          [matDatepicker]="datum">
+          <mat-datepicker-toggle matSuffix [for]="datum"></mat-datepicker-toggle>
+          <mat-datepicker #datum></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Mesto</mat-label>
+          <input 
+          matInput 
+          autocomplete="off"
+          formControlName="mesto"
+          placeholder="Unesite mesto">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Mesto izdavanja</mat-label>
+          <input 
+          matInput 
+          autocomplete="off"
+          formControlName="mestoIzdavanja"
+          placeholder="Unesite mesto izdavanja">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Organ vlasti</mat-label>
+          <input 
+          matInput 
+          autocomplete="off"
+          formControlName="organVlasti"
+          placeholder="Unesite organ vlasti">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Tip žalbe</mat-label>
+          <mat-select formControlName="tip">
+              <mat-option [value]="'cutanje'">
+                  žalba na čutanje organa vlasti
+              </mat-option>
+              <mat-option [value]="'delimicnost'">
+                  žalba na ćutanje-delimicnost organa vlasti
+              </mat-option>
+              <mat-option [value]="'odluka'">
+                  žalba na odluku-odbijanje organa vlasti
+              </mat-option>
+          </mat-select>                
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Stanje žalbe</mat-label>
+          <mat-select formControlName="stanje">
+            <mat-option [value]="'cekanje'">
+              čekanje
+            </mat-option>
+            <mat-option [value]="'prosledjeno'">
+                prosleđeno
+            </mat-option>
+            <mat-option [value]="'odgovoreno'">
+                odgovoreno
+            </mat-option>
+            <mat-option [value]="'odustato'">
+              odbijeno
+            </mat-option>
+            <mat-option [value]="'ispravljeno'">
+              ispravljeno
+            </mat-option>
+            <mat-option [value]="'obustavljeno'">
+              obustavljeno
+            </mat-option>
+            <mat-option [value]="'reseno'">
+              reseno
+            </mat-option>
+          </mat-select>                
+        </mat-form-field>
+        </div>
+      <app-spacer-container>
+        <span></span>
+        <span>
+          <button 
+          *ngIf="!fetchPending"
+          mat-raised-button 
+          color="primary"
+          (click)="naprednaPretraga()">Pretraži</button>
+          <app-spinner-button *ngIf="fetchPending"></app-spinner-button>
+        </span>
+      </app-spacer-container>
+    </form>
 
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="zalbe">
-    
-      <ng-container matColumnDef="tipZalbe">
-        <th mat-header-cell *matHeaderCellDef>Tip žalbe</th>
-        <td mat-cell *matCellDef="let zalba"> {{zalba.tipZalbe}} </td>
-      </ng-container>
+
+  </mat-drawer>
+
+  <app-preloader *ngIf="fetchPending || sendPending" [transparent]="sendPending">
+  </app-preloader>
   
-      <ng-container matColumnDef="datum">
-        <th mat-header-cell *matHeaderCellDef>Datum</th>
-        <td mat-cell *matCellDef="let zalba"> {{convertDate(zalba.datum)}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let zalba">{{zalba.status}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="dokumenti">
-        <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
-        <td mat-cell *matCellDef="let zalba">
-          <a [routerLink]="'/html/zalbe/' + zalba.broj">HTML</a><br>
-          <a [routerLink]="'/pdf/zalbe/' + zalba.broj">PDF</a>        
-      </td>
-      </ng-container>
-
-      <ng-container matColumnDef="metapodaci">
-        <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
-        <td mat-cell *matCellDef="let zalba">
-          <a *ngIf="true" (click)="xmlMetadata(zalba.broj)">XML</a><br>
-          <a *ngIf="true" (click)="jsonMetadata(zalba.broj)">JSON</a>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="akcije">
-        <th mat-header-cell *matHeaderCellDef>Akcije</th>
-        <td mat-cell *matCellDef="let zalba">
-          <a 
-          *ngIf="!sendPending && uloga === 'poverenik' && zalba.status === 'cekanje'"
-          (click)="prosledi(zalba)">
-          Prosledi</a>
-          <a
-          *ngIf="!sendPending && uloga === 'poverenik' && zalba.status === 'odustato'"
-          (click)="obustavi(zalba)">
-          Obustavi</a>
-          <a
-          *ngIf="!sendPending && uloga === 'gradjanin' && canOdustati(zalba)"
-          (click)="odustani(zalba)">
-          Odustani</a>
-          <a 
-          *ngIf="uloga === 'poverenik' && canResiti(zalba)"
-          [routerLink]="'/resenje-form/' + zalba.broj">Dodaj rešenje</a>
-        </td>
-      </ng-container>
+  <div class="root">
+  
+    <h2>Lista podnetih žalbi</h2><br>
+  
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="zalbe">
+      
+        <ng-container matColumnDef="tipZalbe">
+          <th mat-header-cell *matHeaderCellDef>Tip žalbe</th>
+          <td mat-cell *matCellDef="let zalba"> {{zalba.tipZalbe}} </td>
+        </ng-container>
     
-      <tr mat-header-row *matHeaderRowDef="columns"></tr>
-      <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="6">Nema žalbi</td></tr>
+        <ng-container matColumnDef="datum">
+          <th mat-header-cell *matHeaderCellDef>Datum</th>
+          <td mat-cell *matCellDef="let zalba"> {{convertDate(zalba.datum)}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <td mat-cell *matCellDef="let zalba">{{zalba.status}}</td>
+        </ng-container>
+  
+        <ng-container matColumnDef="dokumenti">
+          <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
+          <td mat-cell *matCellDef="let zalba">
+            <a [routerLink]="'/html/zalbe/' + zalba.broj">HTML</a><br>
+            <a [routerLink]="'/pdf/zalbe/' + zalba.broj">PDF</a>        
+        </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="metapodaci">
+          <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
+          <td mat-cell *matCellDef="let zalba">
+            <a *ngIf="true" (click)="xmlMetadata(zalba.broj)">XML</a><br>
+            <a *ngIf="true" (click)="jsonMetadata(zalba.broj)">JSON</a>
+          </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="akcije">
+          <th mat-header-cell *matHeaderCellDef>Akcije</th>
+          <td mat-cell *matCellDef="let zalba">
+            <a 
+            *ngIf="!sendPending && uloga === 'poverenik' && zalba.status === 'cekanje'"
+            (click)="prosledi(zalba)">
+            Prosledi</a>
+            <a
+            *ngIf="!sendPending && uloga === 'poverenik' && zalba.status === 'odustato'"
+            (click)="obustavi(zalba)">
+            Obustavi</a>
+            <a
+            *ngIf="!sendPending && uloga === 'gradjanin' && canOdustati(zalba)"
+            (click)="odustani(zalba)">
+            Odustani</a>
+            <a 
+            *ngIf="uloga === 'poverenik' && canResiti(zalba)"
+            [routerLink]="'/resenje-form/' + zalba.broj">Dodaj rešenje</a>
+          </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="columns"></tr>
+        <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+        <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="6">Nema žalbi</td></tr>
+  
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+  </div>  
 
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-  </div>
-</div>
+</mat-drawer-container>
