dodala prikaz dokumenata koji referenciraju zahtev

--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.sass
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.sass
@@ -14,3 +14,22 @@ th, td
 .mat-drawer
     padding: $padding-20
     width: 400px
+
+tr.header:hover
+    background-color: none
+
+tr:hover
+    background-color: whitesmoke
+
+tr.marked
+    background-color: #ccc
+
+.small-div
+    padding: $padding-30
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+
+.small-table
+    min-width: 500px
