--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -78,7 +78,7 @@
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="zahtevi">
 
-        <ng-container matColumnDef="tipZahteva">
+        <ng-container matColumnDef="tip">
           <th mat-header-cell *matHeaderCellDef>Tip zahteva</th>
           <td mat-cell *matCellDef="let zahtev"> {{zahtev.tipZahteva}} </td>
         </ng-container>
@@ -96,8 +96,8 @@
         <ng-container matColumnDef="dokumenti">
           <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
           <td mat-cell *matCellDef="let zahtev">
-            <a [routerLink]="'/html/zahtevi/' + zahtev.broj">HTML</a><br>
-            <a [routerLink]="'/pdf/zahtevi/' + zahtev.broj">PDF</a>
+            <a [routerLink]="'/html/zahtev/' + zahtev.broj">HTML</a><br>
+            <a [routerLink]="'/pdf/zahtev/' + zahtev.broj">PDF</a>
           </td>
         </ng-container>
 
@@ -121,12 +121,45 @@
           </td>
         </ng-container>
       
-        <tr mat-header-row *matHeaderRowDef="columns"></tr>
-        <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="columns" class="header"></tr>
+        <tr mat-row *matRowDef="let zahtev; columns: columns;"
+        (click)="selectedZahtev = selectedZahtev === zahtev ? null : zahtev"
+        [class.marked]="selectedZahtev?.broj === zahtev.broj"></tr>
+
         <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="6">Nema zahteva</td></tr>
 
       </table>
       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
   </div>
+
+  <div class="small-div">
+    <div></div>
+    <div class="mat-elevation-z8 small-table" *ngIf="selectedZahtev">
+      <table mat-table [dataSource]="selectedZahtev.reference">
+  
+        <ng-container matColumnDef="tip">
+          <th mat-header-cell *matHeaderCellDef>Tip dokumenta</th>
+          <td mat-cell *matCellDef="let referenca"> {{referenca.tip}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="dokumenti">
+          <th mat-header-cell *matHeaderCellDef>Dokumenti</th>
+          <td mat-cell *matCellDef="let referenca">
+            <a [routerLink]="'/html/' + referenca.tip + '/' + referenca.broj">HTML</a><br>
+            <a [routerLink]="'/pdf/' + referenca.tip + '/' + referenca.broj">PDF</a>
+          </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="refColumns"></tr>
+        <tr mat-row *matRowDef="let referenca; columns: refColumns;"></tr>
+  
+        <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="2">Nema referenci</td></tr>
+  
+      </table>
+  
+    </div>
+  
+  </div>
+  
 </mat-drawer-container>
